[gd_scene load_steps=2 format=3 uid="uid://c18eb3u1xl8n4"]

[ext_resource type="Script" path="res://net_demo/uiux/ingame_menu.gd" id="1_myiqj"]

[node name="IngameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myiqj")

[node name="PeerBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="PeerColorID" type="ColorRect" parent="PeerBoxContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
color = Color(1, 1, 1, 0)

[node name="PeerIDLabel" type="Label" parent="PeerBoxContainer"]
offset_left = 68.0
offset_top = 19.0
offset_right = 133.0
offset_bottom = 45.0
text = "Peer ID: "
